# how-so-lit

./: .clang-format  CMakeLists.txt  README.md  devicePrograms.cu  launchParams.h  main.cpp
cmake/: configure_optix.cmake
common/: cuBuffer.h  cudaMathHelper.h
